SPCTR-3645:Spacing control font size inconsistency fix (#3721)
* Added default font-size for spacer control

* Added change log

* changed changelog

* removed changelog

* Added margin to infobox

* Added padding of 4px for MacOS conflict

* reverting accidental changes

* reverting accidental changes

* reverting accidental changes

---------

--- a/src/components/spacing-control/editor.lazy.scss
+++ b/src/components/spacing-control/editor.lazy.scss
@@ -24,6 +24,9 @@
 		margin: 0 -1px 0 0;
 		padding-right: 1px;
 		width: 25%;
+		font-size: 14px;
+		line-height: 20px;
+		padding-left: 4px;
 	}
 
 	input[type="number"].uagb-spacing-control__number:focus {
